Fixed save model weight wrong matrix rows and columns order, finished importing model from a json file